--- a/06_Paper/ER-ED/ERED_Stage2/Discussion.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Discussion.Rmd
@@ -40,7 +40,7 @@ We also found a wide range of SVs (between `r papaja::apa_num(min(data_SV$sv), d
 There was a significant relationship between SVs and choice of strategy. 
 Overly frequent the strategy would be chosen by the persons for whom the highest subjective value had been determined before, which speaks in favour of hypothesis H7.
 Further, we found associations between individual SVs and different predictors.
-Subjective effort, utility, and *Corrugator* muscle activity significantly predicted individual SVs.
+Subjective effort, utility, and *corrugator* muscle activity significantly predicted individual SVs.
 Contrary to our hypothesis H6, utility was the best predictor for individual SVs, explaining `r papaja::printnum(H5_M2_table[4,5]*100, digits = 1)` percent of variance in SVs.
 However, individual SVs did not show associations with ER flexibility, we therefore found no evidence for hypothesis H7.
 
