--- a/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
@@ -85,16 +85,17 @@ A more detailed list of all reasons can be found in Table XX in [supplementary m
 
 Individual SVs could be determined for `r nrow(data_SV)/3` participants for all three ER strategies.
 SVs ranged between `r papaja::apa_num(min(data_SV$sv), digits = 3)` and `r papaja::apa_num(max(data_SV$sv))`.
-In sum, $n=$ `r  papaja::printnum(sum(data_SV$sv == 1))` had one SV of 1.0, indicating a clear preference for one ER strategy.
+$n=$ `r  papaja::printnum(sum(data_SV$sv == 1))` had one SV of 1.0, indicating a clear preference for one ER strategy.
 Absolute preferences for ER strategies were relatively equally distributed.
 Highest SV for distraction was reported by $n=$ `r  papaja::printnum(sum(data_SV$strat_c[data_SV$strategy == "distraction"] == -1))`, for distancing by $n=$ `r  papaja::printnum(sum(data_SV$strat_c[data_SV$strategy == "distancing"] == -1))`, and for suppression by $n=$ `r papaja::printnum(sum(data_SV$strat_c[data_SV$strategy == "suppression"] == -1))`.
 
 To investigate, which variables can predict individual SVs of ER strategies, a multilevel model approach was chosen.
 The ICC of the null model was $ICC=$ `r papaja::printnum(ICC_between_MLM_0)`, indicating that the level-2 predictor subject accounted for `r papaja::printnum(round(ICC_between_MLM_0*100, digits = 1))`% of total variance.
-The preregistered model showed a correlation of $r=$ `r papaja::printnum(attr(summary(MLM_1)$varcor[1]$ID,"correlation")[1,2])` of the random effects subjects and recoded strategy ($BF10$ of the variable strategy: `r papaja::apa_print(MLM_1_BF)$statistic`).
+The preregistered model showed a correlation of $r=$ `r papaja::printnum(attr(summary(MLM_1)$varcor[1]$ID,"correlation")[1,2])` between the random effects *subjects* and *recoded strategy* ($BF10$ of the variable *strategy*: `r papaja::apa_print(MLM_1_BF)$statistic`).
 Our model explained `r papaja::printnum(MLM1_r2[2]*100, digits=1)`% of variance and thus we assumed our model was overfitted due to including recoded strategy as the random slope.
 We therefore set a new model without the recoded strategy as the random slope factor to estimate the influence of predictors on SVs more precisely.
-The second model followed the specification: $$
+The second model followed the specification: 
+$$
 \begin{split}
 SV \sim \text{effort rating} + \text{arousal rating} + \text{utility rating} + corrugator \text{ activity} \\\ + levator \text{ activity} + (1 |subject)
 \end{split}
@@ -116,16 +117,16 @@ papaja::apa_table(
 ```
 
 The predictors effort rating (`r papaja::apa_print(MLM_2, digits = 3)$full_result$effort_cwc`), utility rating (`r papaja::apa_print(MLM_2, digits = 3)$full_result$utility_cwc`), and *corrugator* activity (`r papaja::apa_print(MLM_2, digits = 3)$full_result$Corr_cwc`) showed a significant association with SVs.
-The values were relatively small, so the respective effect size $f^{2}$ was calculated as the explained variance.
+Beta values were relatively small, so the respective effect size $f^{2}$ was calculated as the explained variance.
 The predictor utility rating showed the greatest effect size of all predictors ($f^{2}=$ `r papaja::printnum(H5_M2_table[4,5], digits = 3)`), indicating that utility rating explained `r papaja::printnum(H5_M2_table[4,5]*100, digits = 1)`% of variance in SVs.
 Effort rating showed an effect size of $f^{2}=$ `r papaja::printnum(H5_M2_table[2,5], digits = 3)`.
 The effect sizes of all other predictors were negligibly small ($f^{2}< 0.01$).
 
 #### Associations between subjective values and flexible ER
 
-To investigate the ecological validity of the subjective values of ER strategies we calculated, we tested whether SVs were associated with the actual choice of participants in the choice block.
+To investigate the ecological validity of the calculated subjective values of ER strategies, we tested whether SVs were associated with the actual choice of participants in the last experimental block.
 Therefore, a $\chi^{2}$ test with predicted choice (i.e., the strategy with the highest SV of each participant) and actual choice was computed.
-There was a significant association between predicted choice and actual choice (`r papaja::apa_print(choice_chisq, n=119)$statistic[[1]]`, `r papaja::apa_print(choice_chisq_BF)$statistic`; see figure \@ref(fig:FigSVChoice)).
+There was a significant association between predicted choice and actual choice (`r papaja::apa_print(choice_chisq, n=119)$statistic[[1]]`, `r papaja::apa_print(choice_chisq_BF)$statistic`; see Figure \@ref(fig:FigSVChoice)).
 
 [INSERT FIGURE 4 HERE]
 
@@ -135,10 +136,10 @@ knitr::include_graphics(here("06_Paper", "ER-ED", "ERED_Stage2", "figures", "Fig
 
 We then conducted an ordinal regression with the dependent variable "choice" and the individual SVs of all three strategies as independent variables.
 Overall model fit was fair with $R^{2}=$ `r papaja::printnum(Choice_OrdReg_R2)`.
-The predictor SV of strategy distraction was found to contribute to the model (`r papaja::apa_print(Choice_OrdReg)$full_result$distraction_sv`, $BF10=$ `r papaja::printnum(Choice_OrdReg_Posterior$BFtu_exploratory[2,2])`).
-The estimated odds ratio indicated a higher chance of choosing strategy distraction, when SV of that strategy is higher.
-Additionally, the predictor SV of strategy suppression was found to contribute to the model (`r papaja::apa_print(Choice_OrdReg)$full_result$suppression_sv`, $BF10=$ `r papaja::printnum(Choice_OrdReg_Posterior$BFtu_exploratory[4,3])`).
-The estimated odds ration indicated that a participant is more likely to later choose suppression, when SV of strategy suppression is higher.
+The SV of the strategy distraction contributed significantly to the model (`r papaja::apa_print(Choice_OrdReg)$full_result$distraction_sv`, $BF10=$ `r papaja::printnum(Choice_OrdReg_Posterior$BFtu_exploratory[2,2])`).
+The estimated odds ratio indicated a higher chance of choosing strategy distraction, when the SV of that strategy is higher.
+Additionally, the predictor SV of the strategy suppression contributed significantly to the model (`r papaja::apa_print(Choice_OrdReg)$full_result$suppression_sv`, $BF10=$ `r papaja::printnum(Choice_OrdReg_Posterior$BFtu_exploratory[4,3])`).
+The estimated odds ratio indicated that a participant is more likely to later choose suppression, when the SV of the strategy suppression is higher.
 
 Last, we investigated whether SVs are associated with ER flexibility.
 We conducted a logistic regression to inspect whether participants' individual $slopes$ and $intercepts$ of ordered SVs could predict their ER flexibility score.
@@ -148,13 +149,13 @@ However, model fit was relatively low (`r papaja::apa_print(Flex_LM)$full_result
 ## 3.3. Exploratory analyses
 
 Because associations between self-control, the investment trait Need for Cognition (NFC) and both, effort discounting and demand avoidance have been reported[@ZernaScheffel2022; @Westbrook2013; @Kool2013], we wanted to investigate the influence of self-control and NFC on individual SVs of ER strategies.
-The starting point for this was the model reported before.
+The starting point for this was the adapted MLM, we reported before.
 Only predictors that had previously shown a significant association with SVs were included in the model together with level-2 predictors self-control and NFC.
 The third model followed the specification: $$
 \begin{split}
 SV \sim \text{effort rating} + \text{utility rating} + corrugator \text{ activity} \\\ + \text{self-control} + \text{NFC} + (1 |subject)
 \end{split}
-$$ As one would expect, the predictors effort rating (`r papaja::apa_print(MLM_3, digits = 3)$full_result$effort_cwc`) showed a negative association with SVs, while utility rating (`r papaja::apa_print(MLM_3, digits = 3)$full_result$utility_cwc`), and *Corrugator* activity (`r papaja::apa_print(MLM_3, digits = 3)$full_result$Corr_cwc`) showed a significant positive association with SVs.
+$$ As expected, the predictors effort rating (`r papaja::apa_print(MLM_3, digits = 3)$full_result$effort_cwc`) showed a negative association with SVs, while utility rating (`r papaja::apa_print(MLM_3, digits = 3)$full_result$utility_cwc`), and *Corrugator* activity (`r papaja::apa_print(MLM_3, digits = 3)$full_result$Corr_cwc`) showed a significant positive association with SVs.
 In addition, a positive association was also found between self-control and SVs (`r papaja::apa_print(MLM_3, digits = 3)$full_result$SC_gmc`).
 However, the effect size of self-control was negligibly small ($f^{2}=$ `r papaja::printnum(Exp_M3_table[5,5], digits = 3)`).
 Detailed information can be found in the [supplementary material](#SupplementExploratory).
