--- a/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
+++ b/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
@@ -1215,7 +1215,7 @@ https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7177019/pdf/fpsyg-11-00470.pdf},
 
 @article{ZernaScheffel2022,
    author = {Zerna, J. and Scheffel, C. and Kührt, C. and Strobel, A.},
-   title = {When easy is not preferred: An effort discounting for estimating subjective values of taks},
+   title = {When easy is not preferred: A discounting paradigm to assess load-independent task preference},
    journal = {PsyArXiv},
    DOI = {10.31234/osf.io/ysh3q},
    year = {2022},
