--- a/06_Paper/ER-ED/ERED_Stage2/Discussion.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Discussion.Rmd
@@ -50,35 +50,32 @@ Our aim was to calculate individual subjective values in order to develop a bett
 Most individuals show large variability in strategy choice, both within-strategy and between-strategy[@Blanke2020;@Burr2020;@Elkjaer2022]. 
 Greater variability may even be adaptive[@Blanke2020;@Aldao2015].
 In addition, a variety of factors that influence strategy choice in specific situations have been examined[@Scheffel2021;@Sheppes2011;@Sheppes2014;@Wilms2020;@Young2020;@Matthews2021], including situation intensity and effort.
-However, these factors have often been studied separately.
-Only rarely have effects of the factors been studied in combination[@Young2020].
-Moreover, the usual paradigms used in ER choice research (e.g., Sheppes et al.[@Sheppes2011]) can only estimate how a factor tends to drive the choice in one direction or the other.
-However, it cannot be determined in this way what internal subjective value individuals attribute to the choice options.
-We are confident that we have succeeded in this with the present paradigm.
-On the one hand, we were able to show which factors influence the values, but on the other hand, we were able to show the actual practical relevance of the values.
-The highest SVs of the individuals were associated with the choice made by the participants. 
-Until now, it has been difficult to transfer such findings from the laboratory to everyday life[@Wilms2020].
-This may be due to the fact that in laboratory studies, the choice options are often predetermined by the design of the experiment [@Sheppes2011;@Sheppes2014;@Scheffel2021].
-It was therefore attempted to investigate ER choice and influencing factors in everyday life.
-However, even there, certain strategies were often prescribed (for example studies, see English et al.[@English2017], Millgram et al.[@Millgram2019], Wilms et al.[@Wilms2020]). 
-Although these covered a large area of the emotion-genesis process[@Gross1998emerging], they were nevertheless ultimately fixed.
-Of course, the calculation of SVs in our new CAD paradigm is tied to the strategies with which the strategy of interest is compared.
-However, it would be possible to use ecological momentary assessment to capture ER strategies[@Koval2020].
-This would allow all strategies of the ER repertoire to be recorded for each individual[@Aldao2015]. 
-Also those that are rarely used or even marked as maladaptive, such as alcohol consumption or rumination[@Pena-Sarrionandia2015].
+However, these factors have often been studied in isolation from each other.
+Rarely have their combined effects been investigated[@Young2020].
+Furthermore, the usual paradigms used in ER choice research (e.g., Sheppes et al.[@Sheppes2011]) can only estimate how a factor tends to drive the choice in one direction or the other.
+They cannot determine the internal subjective value individuals attribute to the choice options.
+We are confident that we have achieved this with the present paradigm.
+On the one hand, we were able to show which factors have an influence the values, and on the other hand, we were able to show the actual practical relevance of the values.
+The highest SVs of the individuals were associated with the choice made by the participants in the last experimental block. 
+So far, it has been difficult to transfer such findings from the laboratory to everyday life[@Wilms2020].
+This may be because in laboratory studies the choice options are often predetermined by the experimental design[@Sheppes2011;@Sheppes2014;@Scheffel2021].
+Therefore, attempts have been made to investigate ER choice and influencing factors in everyday life, in previous studies.
+Even there, however, certain strategies were often prescribed (for example studies, see English et al.[@English2017], Millgram et al.[@Millgram2019], Wilms et al.[@Wilms2020]), although covering a large part of the process of emotion generation[@Gross1998emerging].
+Of course, the calculation of SVs in our new CAD paradigm is similarly tied to the strategies with which the strategy of interest is compared.
+To allow all strategies in the ER repertoire to be recorded for each individual, a study might use ecological momentary assessment[@Aldao2015;@Koval2020].
+This would also capture strategies that are rarely used or even considered maladaptive, such as alcohol consumption or rumination[@Pena-Sarrionandia2015].
 
-In order to draw a more comprehensive picture on ER, dynamic or cyclic processes have to be considered.
+In order to gain a more comprehensive picture of ER, dynamic or cyclic processes have to be considered.
 The extended process model of emotion regulation[@Gross2015] postulates three sequential stages, namely identification, selection, and implementation, to achieve a given goal in a situation.
-If it is determined that the regulation goal is not being achieved, the ER strategy can be maintained, stopped or switched[@Gross2015].
-Importantly, information about the effects of implementing ER strategies influences the choice of ER strategies in future situations, due to contextual feedback even changes the context[@Gross2015;@AldaoChristensen2015;@Murphy2018;@Sheppes2020].
-This means that for studies on ER Choice, not only situational factors should be taken into account, but also contextual factors[@Murphy2018].
-For example, Murphy and Young[@Murphy2018] could show that in a classic ER choice paradigm[@Sheppes2011], strategy selection was significantly influenced by strategy selection and negative affect of the preceding trial.
+If the regulatory goal is not achieved, the ER strategy can be maintained, switched or stopped[@Gross2015].
+Importantly, the information about the success of implementing an ER strategy influences the choice of ER strategies in future situations, because the regulation context is changed through contextual feedback [@Gross2015;@AldaoChristensen2015;@Murphy2018;@Sheppes2020].
+This means that studies on ER Choice should consider not only situational factors, but also contextual factors[@Murphy2018].
+For example, in a classic ER choice paradigm[@Sheppes2011], Murphy and Young[@Murphy2018] showed that strategy choice was significantly influenced by strategy choice and negative affect on the previous trial.
 This provides empirical evidence that experience gained during use of ER strategies influences future choice of ER strategies.
 Our newly developed paradigm also makes an important contribution here.
-The information and experiences that participants gather when using strategies subsequently flow implicitly into the calculation of subjective values.
-That is, because the participants first go through all the strategies and then make the monetary decisions on the basis that they should repeat the strategies again. 
-The decisions are made on the basis of the stimulus material that the individuals previously viewed. 
-Therefore, the question arises as to how stable these individual SVs are.
+The information and experiences that participants gain while using the strategies in the experimental task might be implicitly incorporated into the subsequent calculation of subjective values.
+That is, the participants first apply all the strategies and then make the monetary decisions while expecting that they should repeat the strategies again.
+This raises the question of how stable these individual SVs are.
 
 ## Trait character of SVs
 
