added reference on latent state trait modelling

--- a/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
+++ b/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
@@ -1034,6 +1034,18 @@ https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6191057/pdf/nihms956496.pdf},
    year = {2011},
 }
 
+@article{Steyer2015,
+   author = {Steyer, R. and Mayer, A. and Geiser, C. and Cole, D. A.},
+   title = {A Theory of States and Traits-Revised},
+   journal = {Annual Review of Clinical Psychology},
+   volume = {11},
+   pages = {71-+},
+   ISSN = {1548-5943},
+   DOI = {10.1146/annurev-clinpsy-032813-153719},
+   url = {<Go to ISI>://WOS:000352014000004},
+   year = {2015}
+}
+
 @article{Strobel2020,
    author = {Strobel, A. and Wieder, G. and Paulus, P. C. and Ott, F. and Pannasch, S. and Kiebel, S. J. and Kuhrt, C.},
    title = {Dispositional cognitive effort investment and behavioral demand avoidance: Are they related?},
